fixed scss on mobile screen

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,26 +1,28 @@
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  margin: 20px;
+  margin: 30px;
 }
 
 
 .calculator {
-  max-width: 40%;
-  // height: 500px;
+  max-width: 500px;
+  height: calc(100vh - 60px);
   padding: 10px;
   padding-top: 10%;
   background-color: black;
   border-radius: 30px;
-  // margin: 10px;
-  
-  
+  margin: auto;
+
 
     .display_numbers {
       width: 100%;
+      height: 30%;
       font-size: 30px;
       text-align: left;
       background-color: black;
@@ -36,8 +38,9 @@ body {
       grid-template-columns: 1fr 1fr 1fr 1fr;
       grid-template-rows: (5, 1fr);
       padding: 10px 0;
-      gap: 5px;
+      gap: 12px;
       width: 100%;
+      height: 70%;
 
       #button_zero {
         grid-row-start: 5;
@@ -53,19 +56,19 @@ body {
 
 
 button {
-  // how do i get buttons to be in the center
+  justify-self: center;
+  align-self: center;
   border-radius: 50%;
-  height: 20px;
-  // width: 100%;
-  width: 20px;
+  height: 100%;
+  width: 100%;
   border: none;
   background-color: darkgray;
   color: white;
-  font-size: 12px;
+  font-size: 45px;
   cursor: pointer;
 
   &:hover {
-    background-color: darken(darkgray, 40%); // not all the buttons are hovering
+    background-color: darken(darkgray, 40%);
   }
 }
 
